# keepassxc

./: CMakeLists.txt  Dockerfile  INSTALL.md  README.md
ci/snapcraft/: Dockerfile
ci/trusty/: Dockerfile
docs/: QUICKSTART.md
src/: CMakeLists.txt  config-keepassx.h.cmake
src/autotype/: AutoType.cpp
src/browser/: BrowserService.cpp  NativeMessagingBase.cpp  NativeMessagingBase.h
src/cli/: Merge.cpp
src/core/: AutoTypeAssociations.cpp  AutoTypeAssociations.h  Clock.cpp  Clock.h  Compare.h  Config.cpp  (+19 more)
src/sharing/: CMakeLists.txt  DatabaseSettingsPageSharing.cpp  DatabaseSettingsPageSharing.h  DatabaseSettingsSharingPage.cpp  DatabaseSettingsSharingPage.h  DatabaseSettingsSharingWidget.cpp  DatabaseSettingsSharingWidget.h  DatabaseSettingsSharingWidget.ui  DatabaseSettingsWidgetSharing.cpp  DatabaseSettingsWidgetSharing.h  DatabaseSettingsWidgetSharing.ui  DatabaseSharing.cpp  DatabaseSharing.h  Sharing.cpp  Sharing.h  SharingObserver.cpp  SharingObserver.h  SharingSettings.cpp  SharingSettings.h  Signature.cpp
src/sharing/group/: EditGroupPageSharing.cpp  EditGroupPageSharing.h  EditGroupWidgetSharing.cpp  EditGroupWidgetSharing.h  EditGroupWidgetSharing.ui  GroupSharingPage.cpp  GroupSharingPage.h  GroupSharingWidget.cpp  GroupSharingWidget.h  GroupSharingWidget.ui
tests/: CMakeLists.txt  TestEntry.cpp  TestGlobal.h  TestGroup.cpp  TestKeePass2Format.cpp  TestMerge.cpp  TestMerge.h  TestModified.cpp  TestOpenSSHKey.cpp  TestOpenSSHKey.h  TestRandomGenerator.cpp  TestRandomGenerator.h  TestSharing.cpp  TestSharing.h  TestSignature.cpp  TestSignature.h
(+97 files in other folders)
